[package]
name = "stasislang"
version = "0.1.0"
authors = ["Julia Herbsthofer <j@juli.zip>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
name ="stasis"
path = "src/lib.rs"

[[bin]]
name ="stasislang"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = []

[dependencies]
wasm-bindgen = "0.2.87"
